# CG_board

./: CMakeLists.txt  README.md  main.cpp
algorithms/include/: algorithms.h  circle_algorithms.h  coord.h  line_algorithms.h  polygon_algorithms.h
algorithms/src/: circle_algorithms.cpp  coord.cpp  line_algorithms.cpp  polygon_algorithms.cpp
canvas/include/: canvas.h
canvas/src/: canvas.cpp
graphic/include/: line.hpp
mainwindow/include/: mainwindow.h
mainwindow/src/: mainwindow.cpp
ppt/: CHAPTER2-二维图元的生成.ppt  CHAPTER3-二维图元的填充.pptm  CHAPTER4-混淆与反混淆方法.ppt
